--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -3,9 +3,15 @@
 
 name: Python application
 
+defaults:
+  run:
+    working-directory: ./api
+
 on:
   push:
     branches: ["main"]
+    paths:
+      - api/**
   pull_request:
     branches: ["main"]
 
