--- a/api/requirements-dev.txt
+++ b/api/requirements-dev.txt
@@ -1,9 +1,4 @@
-bandit
-black
-flake8
-isort
-mypy
-pytest
-pytest-cov
-toml
-httpx
+-r requirements/bandit.txt
+-r requirements/flake.txt
+-r requirements/mypy.txt
+-r requirements/pytest.txt
