setting up tox, poetry, and codecov

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,13 +2,12 @@
     "recommendations": [
         "ms-python.black-formatter",
         "ms-python.flake8",
-        "ms-python.mypy-type-checker",
         "ms-python.vscode-pylance",
         "ms-python.python",
         "esbenp.prettier-vscode",
         "dbaeumer.vscode-eslint",
         "ms-playwright.playwright",
         "github.vscode-github-actions",
-        "the-compiler.python-tox"
+        "ms-python.mypy-type-checker"
     ]
   }
