--- a/api/tox.ini
+++ b/api/tox.ini
@@ -1,18 +1,6 @@
 [tox]
-skipsdist = true
-envlist = hewwo
-
-[testenv]
-allowlist_externals = poetry
-commands =
-    poetry install -v
-    poetry run pytest
-
-#kevin
-
-[tox]
 envlist =
-    mypy
+    lint
     pytest
 minversion = 4.11.0
 skip_missing_interpreters = true
@@ -27,13 +15,14 @@ setenv =
 skip_install = true
 
 #
-# Lints
+# Linting
 #
 
-[testenv:mypy]
+[testenv:lint]
 commands =
-    mypy {toxinidir}/snagem
-deps = mypy
+    mypy {toxinidir}/app
+deps = lint
+install_command = poetry install --only main --only {packages}
 
 #
 # Tests
@@ -41,6 +30,12 @@ deps = mypy
 
 [testenv:pytest]
 commands =
-    pytest --cov={toxinidir}/snagem/ --cov-config={toxinidir}/pyproject.toml
+    pytest --cov api --cov-report xml:api/coverage.xml
 deps = pytest
 install_command = poetry install --only main --only {packages}
+
+[testenv:coverage]
+commands =
+    coverage report -m --skip-covered --data-file=../.coverage
+deps = coverage
+install_command = poetry install --only {packages}
