--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -55,9 +55,11 @@ flake8 = "^6.1.0"
 isort = "^5.12.0"
 mypy = "^1.7.0"
 
-
 [tool.poetry.group.dev.dependencies]
 tox = "^4.11.3"
+
+[tool.poetry.group.coverage.dependencies]
+coverage = "^7.3.2"
 
 [build-system]
 requires = ["poetry-core"]
