--- a/api/setup.cfg
+++ b/api/setup.cfg
@@ -1,5 +1,13 @@
 [flake8]
 max-line-length = 79
+exclude =
+    migrations
+    __pycache__
+    env
+    .env
+    venv
+    .venv
+    .tox
 
 [tool:pytest]
 testpaths = tests
