--- a/api/tox.ini
+++ b/api/tox.ini
@@ -30,7 +30,7 @@ install_command = poetry install --only main --only {packages}
 
 [testenv:pytest]
 commands =
-    pytest --cov api --cov-report xml:api/coverage.xml
+    pytest --cov-report xml:coverage.xml
 deps = pytest
 install_command = poetry install --only main --only {packages}
 
