--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -22,7 +22,7 @@ permissions:
   contents: read
 
 jobs:
-  build:
+  Tests:
     runs-on: ubuntu-latest
 
     steps:
@@ -45,8 +45,8 @@ jobs:
       - name: Run Tox (Pytest)
         run: poetry run tox -e pytest
 
-      - name: Coverage Report
-        run: poetry run tox -e coverage
+      # - name: Coverage Report
+      #   run: poetry run tox -e coverage
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
