generating the coverage report helps

--- a/api/tox.ini
+++ b/api/tox.ini
@@ -31,12 +31,12 @@ install_command = poetry install --only main --only {packages}
 
 [testenv:pytest]
 commands =
-    pytest --cov-report xml:coverage.xml
+    pytest --cov --cov-report xml:coverage.xml
 deps = pytest
 install_command = poetry install --only main --only {packages}
 
 [testenv:coverage]
 commands =
-    coverage report -m --skip-covered --data-file=../.coverage
+    coverage report -m --skip-covered
 deps = coverage
 install_command = poetry install --only {packages}
