--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -45,13 +45,13 @@ jobs:
       - name: Run Tox (Pytest)
         run: poetry run tox -e pytest
 
-      # - name: Coverage Report
-      #   run: poetry run tox -e coverage
+      - name: Coverage Report
+        run: poetry run tox -e coverage
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
         with:
-          files: ../.coverage
+          files: .coverage
           flags: pytest
