sparing codecov uploading coverage.py

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -53,5 +53,5 @@ jobs:
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
         with:
-          directory: api
+          files: ./coverage.xml
           flags: pytest
