--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -53,5 +53,5 @@ jobs:
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
         with:
-          files: ./coverage.xml
+          files: ./api/coverage.xml
           flags: pytest
