--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,6 +1,4 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
-
+---
 name: Python application
 
 defaults:
@@ -9,37 +7,51 @@ defaults:
 
 on:
   push:
-    branches: ["main"]
+    # branches: ["main"]
     paths:
-      - api/**
+      - api/**/*.py
+      - poetry.lock
   pull_request:
     branches: ["main"]
+    paths:
+      - api/**/*.py
+      - poetry.lock
   workflow_dispatch:
 
 permissions:
   contents: read
 
 jobs:
-  build:
+  Tests:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Python 3.10
+
+      - name: Set up Python 3.12
         uses: actions/setup-python@v3
         with:
-          python-version: "3.10"
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install flake8 pytest
-          pip install -r requirements.txt -r requirements/pytest.txt
-      - name: Lint with flake8
-        run: |
-          # stop the build if there are Python syntax errors or undefined names
-          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-          # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-      - name: Test with pytest
-        run: |
-          pytest
+          python-version: "3.12"
+
+      - name: Install Poetry
+        run: pip install poetry
+
+      - name: Install Dependencies
+        run: poetry install --without server
+
+      - name: Run Tox (Lint)
+        run: poetry run tox -e lint
+
+      - name: Run Tox (Pytest)
+        run: poetry run tox -e pytest
+
+      - name: Coverage Report
+        run: poetry run tox -e coverage
+
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v3
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+        with:
+          files: ./api/coverage.xml
+          flags: pytest
