--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -46,5 +46,5 @@ jobs:
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
         with:
-          files: ./frontend/coverage.xml
+          files: ./frontend/results.json
           flags: playwright
