--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -7,6 +7,8 @@ authors = ["Madeleine Ethridge <madeleine.ethridge@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.12"
 fastapi = "^0.104.0"
+celery = "^5.3.6"
+redis = "^5.0.1"
 
 [tool.poetry.group.pytest.dependencies]
 pytest = "^7.4.3"
