--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build: ./api
     ports:
       - 8000:8000
-    command: poetry run uvicorn app.main:app --host 0.0.0.0
+    command: uvicorn app.main:app --host 0.0.0.0
     depends_on:
       - redis
       - db
@@ -24,7 +24,7 @@ services:
   celery_worker:
     build: ./api
     image: fastapi_celery_example_celery_worker
-    command: poetry run celery -A app.main.celery worker --loglevel=info
+    command: celery -A app.main.celery worker --loglevel=info
     env_file:
       - .env/.dev-sample
     depends_on:
@@ -34,7 +34,7 @@ services:
   celery_beat:
     build: ./api
     image: fastapi_celery_example_celery_beat
-    command: poetry run celery -A app.main.celery beat -l info
+    command: celery -A app.main.celery beat -l info
     env_file:
       - .env/.dev-sample
     depends_on:
