--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build: ./api
     ports:
       - 8000:8000
-    command: uvicorn app.main:app --host 0.0.0.0
+    command: /commands/api
     depends_on:
       - redis
       - db
