--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -12,6 +12,7 @@ redis = "^5.0.1"
 requests = "^2.31.0"
 beautifulsoup4 = "^4.12.2"
 lxml = "^4.9.3"
+pydantic = "<2.0.0"
 
 [tool.poetry.group.pytest.dependencies]
 pytest = "^7.4.3"
@@ -67,6 +68,7 @@ disallow_any_unimported = false
 disallow_subclassing_any = false
 disallow_untyped_defs = true
 disallow_untyped_calls = false
+disallow_untyped_decorators = false
 ignore_missing_imports = true
 no_implicit_optional = true
 warn_return_any = true
