--- a/api/tox.ini
+++ b/api/tox.ini
@@ -8,7 +8,6 @@ skip_missing_interpreters = true
 
 [testenv]
 allowlist_externals = poetry
-install_command = poetry install --no-root --only {packages}
 setenv =
     PYTHONDONTWRITEBYTECODE=true
     PYTHONPYCACHEPREFIX=/tmp
@@ -21,9 +20,9 @@ skip_install = true
 
 [testenv:lint]
 commands =
+    poetry install --no-root --only main,lint --sync
     mypy {toxinidir}/app
-deps = lint
-install_command = poetry install --only main --only {packages}
+install_command = poetry install --only main,lint
 
 #
 # Tests
@@ -31,12 +30,12 @@ install_command = poetry install --only main --only {packages}
 
 [testenv:pytest]
 commands =
+    poetry install --no-root --only main,pytest --sync
     pytest --cov --cov-report xml:coverage.xml
-deps = pytest
-install_command = poetry install --only main --only {packages}
+install_command = poetry install --only main,pytest
 
 [testenv:coverage]
 commands =
+    poetry install --no-root --only coverage --sync
     coverage report -m --skip-covered
-deps = coverage
-install_command = poetry install --only {packages}
+install_command = poetry install --only coverage
