--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,6 +1,25 @@
-FROM python:3.12.0-alpine
-WORKDIR /code
-COPY ./requirements.txt /code/requirements.txt
-RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
-COPY ./app /code/app
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "80"]
+FROM python:3.12.0-bookworm as builder
+
+RUN pip install poetry==1.7.1
+ENV POETRY_NO_INTERACTION=1 \
+    POETRY_VIRTUALENVS_IN_PROJECT=1 \
+    POETRY_VIRTUALENVS_CREATE=1 \
+    POETRY_CACHE_DIR=/tmp/poetry_cache
+
+WORKDIR /poetry
+
+COPY ./poetry.lock ./pyproject.toml ./ 
+RUN poetry install --only main --only server --no-root && rm -rf $POETRY_CACHE_DIR
+
+# The runtime image, used to just run the code provided its virtual environment
+FROM python:3.12.0-slim-bookworm as runtime
+
+ENV VIRTUAL_ENV=/poetry/.venv \
+    PATH="/poetry/.venv/bin:$PATH"
+COPY --from=builder ${VIRTUAL_ENV} ${VIRTUAL_ENV}
+
+COPY ./commands /commands
+RUN sed -i 's/\r$//g' /commands/api
+RUN chmod -R +x /commands
+
+COPY ./app /app
