--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,53 @@
-version: '3.4'
-
 services:
   api:
     image: api
     build: ./api
     ports:
       - 8000:8000
+    command: /commands/api
+    depends_on:
+      - redis
+      - db
+
+  db:
+    image: postgres
+    # volumes:
+    #   - postgres_data:/var/lib/postgresql/data/
+    environment:
+      - POSTGRES_DB=fastapi_celery
+      - POSTGRES_USER=fastapi_celery
+      - POSTGRES_PASSWORD=fastapi_celery
+
+  redis:
+    image: redis
+
+  celery_worker:
+    build: ./api
+    image: fastapi_celery_example_celery_worker
+    command: celery -A app.main.celery worker --loglevel=info
+    env_file:
+      - .env/.dev-sample
+    depends_on:
+      - redis
+      - db
+
+  celery_beat:
+    build: ./api
+    image: fastapi_celery_example_celery_beat
+    command: celery -A app.main.celery beat -l info
+    env_file:
+      - .env/.dev-sample
+    depends_on:
+      - redis
+      - db
+
+  flower:
+    image: mher/flower
+    command: celery flower --app=app.main.celery --broker="redis://redis:6379/0"
+    env_file:
+      - .env/.dev-sample
+    ports:
+      - 5557:5555
+    depends_on:
+      - redis
+      - db
