--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -14,14 +14,13 @@ beautifulsoup4 = "^4.12.2"
 lxml = "^4.9.3"
 pydantic = "<2.0.0"
 sqlmodel = "^0.0.12"
+alembic = "^1.12.1"
 
 [tool.poetry.group.pytest.dependencies]
 pytest = "^7.4.3"
 pytest-cov = "^4.1.0"
 httpx = "^0.25.1"
-
-[tool.poetry.group.bandit.dependencies]
-bandit = { extras = ["toml"], version = "^1.7.5" }
+pytest-asyncio = "^0.21.1"
 
 [tool.poetry.group.lint.dependencies]
 black = "^23.11.0"
@@ -29,6 +28,9 @@ flake8 = "^6.1.0"
 isort = "^5.12.0"
 mypy = "^1.7.0"
 types-requests = "^2.31.0.10"
+
+[tool.poetry.group.security.dependencies]
+bandit = { extras = ["toml"], version = "^1.7.5" }
 
 [tool.poetry.group.dev.dependencies]
 tox = "^4.11.3"
@@ -38,6 +40,7 @@ coverage = "^7.3.2"
 
 [tool.poetry.group.server.dependencies]
 uvicorn = { extras = ["standard"], version = "^0.24.0.post1" }
+asyncpg = "^0.29.0"
 
 [build-system]
 requires = ["poetry-core"]
@@ -45,6 +48,9 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.bandit]
 exclude_dirs = ["tests"]
+skips = [
+    "B410", # https://github.com/PyCQA/bandit/issues/767
+]
 
 [tool.black]
 line-length = 79
