--- a/api/tox.ini
+++ b/api/tox.ini
@@ -1,6 +1,8 @@
 [tox]
 envlist =
-    lint
+    flake8
+    mypy
+    bandit
     pytest
     coverage
 minversion = 4.11.0
@@ -18,11 +20,23 @@ skip_install = true
 # Linting
 #
 
-[testenv:lint]
+[testenv:mypy]
 commands =
     poetry install --no-root --only main,lint --sync
     mypy {toxinidir}/app
 install_command = poetry install --only main,lint
+
+[testenv:flake8]
+commands =
+    poetry install --no-root --only main,lint --sync
+    flake8 {toxinidir}/app
+install_command = poetry install --only main,lint
+
+[testenv:bandit]
+commands =
+    poetry install --no-root --only main,security --sync
+    bandit --quiet -c "{toxinidir}/pyproject.toml" -r {toxinidir}/app
+install_command = poetry install --only main,security
 
 #
 # Tests
