--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -1,3 +1,5 @@
+# Poetry
+
 [tool.poetry]
 name = "app"
 version = "0.1.0"
@@ -21,6 +23,7 @@ pytest = "^7.4.3"
 pytest-cov = "^4.1.0"
 httpx = "^0.25.1"
 pytest-asyncio = "^0.21.1"
+aiosqlite = "^0.19.0"
 
 [tool.poetry.group.lint.dependencies]
 black = "^23.11.0"
@@ -45,6 +48,8 @@ asyncpg = "^0.29.0"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+# Tool Configs
 
 [tool.bandit]
 exclude_dirs = ["tests"]
@@ -80,3 +85,7 @@ ignore_missing_imports = true
 no_implicit_optional = true
 warn_return_any = true
 warn_unused_ignores = true
+
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
