--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -11,7 +11,6 @@ WORKDIR /poetry
 COPY ./poetry.lock ./pyproject.toml ./ 
 RUN poetry install --only main --only server --no-root && rm -rf $POETRY_CACHE_DIR
 
-# The runtime image, used to just run the code provided its virtual environment
 FROM python:3.12.0-slim-bookworm as runtime
 
 ENV VIRTUAL_ENV=/poetry/.venv \
@@ -19,7 +18,8 @@ ENV VIRTUAL_ENV=/poetry/.venv \
 COPY --from=builder ${VIRTUAL_ENV} ${VIRTUAL_ENV}
 
 COPY ./commands /commands
-RUN sed -i 's/\r$//g' /commands/api
+# nuke windows line endings
+RUN sed -i 's/\r$//g' /commands/api 
 RUN chmod -R +x /commands
 
 COPY ./alembic.ini /alembic.ini
