--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -86,6 +86,6 @@ no_implicit_optional = true
 warn_return_any = true
 warn_unused_ignores = true
 
-
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
+filterwarnings = ['ignore:datetime.datetime.utcfromtimestamp\(\) is deprecated']
