--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,50 +4,55 @@ services:
     build: ./api
     ports:
       - 8000:8000
-    command: uvicorn app.main:app --host 0.0.0.0
+    command: /commands/api
     env_file:
       - .env/.env.dev
     depends_on:
-      - redis
-      - db
+      redis:
+        condition: service_started
+      postgres:
+        condition: service_healthy
 
-  db:
+  postgres:
     image: postgres
-    # volumes:
-    #   - postgres_data:/var/lib/postgresql/data/
     env_file:
       - .env/.env.dev
+    healthcheck:
+      test: /usr/bin/pg_isready
+      interval: 5s
+      timeout: 10s
+      retries: 120
 
   redis:
     image: redis
 
   celery_worker:
     build: ./api
-    image: fastapi_celery_example_celery_worker
-    command: celery -A app.main.celery worker --loglevel=info
+    image: celery_worker
+    command: celery -A app.worker.celery worker --loglevel=info
     env_file:
       - .env/.env.dev
     depends_on:
       - redis
-      - db
+      - postgres
 
   celery_beat:
     build: ./api
-    image: fastapi_celery_example_celery_beat
-    command: celery -A app.main.celery beat -l info
+    image: celery_worker
+    command: celery -A app.worker.celery beat -l info
     env_file:
       - .env/.env.dev
     depends_on:
       - redis
-      - db
+      - postgres
 
   flower:
     image: mher/flower
-    command: celery flower --app=app.main.celery --broker="redis://redis:6379/0"
+    command: celery flower --app=app.worker.celery --broker="redis://redis:6379/0"
     env_file:
       - .env/.env.dev
     ports:
       - 5557:5555
     depends_on:
       - redis
-      - db
+      - postgres
