pytest needs alembic

--- a/api/tox.ini
+++ b/api/tox.ini
@@ -45,6 +45,7 @@ install_command = poetry install --only main,security
 [testenv:pytest]
 commands =
     poetry install --no-root --only main,pytest --sync
+    alembic upgrade head
     pytest --cov --cov-report xml:coverage.xml
 install_command = poetry install --only main,pytest
 
