--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,6 @@ coverage.xml
 cover/
 
 # Environments
-.env
 .venv
 env/
 venv/
@@ -31,3 +30,9 @@ node_modules/
 /playwright-report/
 /blob-report/
 /playwright/.cache/
+
+# config
+.env/.env.prod
+
+# development databases
+*.db
