--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -1,3 +1,5 @@
+# Poetry
+
 [tool.poetry]
 name = "app"
 version = "0.1.0"
@@ -13,14 +15,15 @@ requests = "^2.31.0"
 beautifulsoup4 = "^4.12.2"
 lxml = "^4.9.3"
 pydantic = "<2.0.0"
+sqlmodel = "^0.0.12"
+alembic = "^1.12.1"
 
 [tool.poetry.group.pytest.dependencies]
 pytest = "^7.4.3"
 pytest-cov = "^4.1.0"
 httpx = "^0.25.1"
-
-[tool.poetry.group.bandit.dependencies]
-bandit = { extras = ["toml"], version = "^1.7.5" }
+pytest-asyncio = "^0.21.1"
+aiosqlite = "^0.19.0"
 
 [tool.poetry.group.lint.dependencies]
 black = "^23.11.0"
@@ -28,6 +31,10 @@ flake8 = "^6.1.0"
 isort = "^5.12.0"
 mypy = "^1.7.0"
 types-requests = "^2.31.0.10"
+
+[tool.poetry.group.security.dependencies]
+bandit = { extras = ["toml"], version = "^1.7.5" }
+pip-audit = "^2.6.1"
 
 [tool.poetry.group.dev.dependencies]
 tox = "^4.11.3"
@@ -37,13 +44,19 @@ coverage = "^7.3.2"
 
 [tool.poetry.group.server.dependencies]
 uvicorn = { extras = ["standard"], version = "^0.24.0.post1" }
+asyncpg = "^0.29.0"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
+# Tool Configs
+
 [tool.bandit]
 exclude_dirs = ["tests"]
+skips = [
+    "B410", # https://github.com/PyCQA/bandit/issues/767
+]
 
 [tool.black]
 line-length = 79
@@ -73,3 +86,7 @@ ignore_missing_imports = true
 no_implicit_optional = true
 warn_return_any = true
 warn_unused_ignores = true
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
+filterwarnings = ['ignore:datetime.datetime.utcfromtimestamp\(\) is deprecated']
