fixing env for testing

--- a/.env/.env.test
+++ b/.env/.env.test
@@ -1,10 +1,10 @@
 # BASE
 
 DEBUG=True
-PROJECT_NAME="Archive Binge (local)"
-VERSION="0.1.0"
+PROJECT_NAME="Archive Binge (test)"
+VERSION="0.1.5"
 DESCRIPTION="The API for Archive Binge."
-ENVIRONMENT=development
+ENVIRONMENT=test
 
 # DATABASE
 
