--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -32,9 +32,10 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: "3.12"
+          cache: "poetry"
 
       - name: Install Poetry
-        run: pip install poetry
+        run: pip install poetry==1.7.1
 
       - name: Install Dependencies
         run: poetry install --without server
