--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -24,6 +24,7 @@ pytest-cov = "^4.1.0"
 httpx = "^0.25.1"
 pytest-asyncio = "^0.21.1"
 aiosqlite = "^0.19.0"
+pytest-dotenv = "^0.5.2"
 
 [tool.poetry.group.lint.dependencies]
 black = "^23.11.0"
@@ -90,3 +91,4 @@ warn_unused_ignores = true
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
 filterwarnings = ['ignore:datetime.datetime.utcfromtimestamp\(\) is deprecated']
+env_files = [".env/.env.test"]
