building out the ability to register users through frontend

--- a/.env/.env.dev
+++ b/.env/.env.dev
@@ -4,7 +4,8 @@ DEBUG=True
 PROJECT_NAME="Archive Binge (local)"
 VERSION="0.1.0"
 DESCRIPTION="The API for Archive Binge."
-ENVIRONMENT=development
+ENVIRONMENT="development"
+SECRET_KEY="verysecretkey"
 
 # DATABASE
 
