--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,10 +12,13 @@
     "editor.formatOnSave": true,
     "editor.minimap.maxColumn": 99,
     "[python]": {
+        "editor.defaultFormatter": "ms-python.black-formatter",
+        "editor.formatOnSave": true,
         "editor.codeActionsOnSave": {
             "source.organizeImports": true
-        }
+        },
     },
+    "isort.args":["--profile", "black"],
     "black-formatter.importStrategy": "fromEnvironment",
     "python.testing.pytestArgs": [
         "--cov",
