--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -17,6 +17,9 @@ lxml = "^4.9.3"
 pydantic = "<2.0.0"
 sqlmodel = "^0.0.12"
 alembic = "^1.12.1"
+python-multipart = "^0.0.6"
+authlib = "^1.2.1"
+passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 
 [tool.poetry.group.pytest.dependencies]
 pytest = "^7.4.3"
