--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
+    "jwt-decode": "^4.0.0",
+    "moment": "^2.29.4",
     "next": "14.0.3",
     "react": "^18",
     "react-bootstrap": "^2.9.1",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-router-bootstrap": "^0.26.2"
   },
   "devDependencies": {
     "@playwright/test": "^1.40.0",
