--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "test": "playwright test"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.12.1",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "jwt-decode": "^4.0.0",
