--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -9,18 +9,17 @@ authors = ["Madeleine Ethridge <madeleine.ethridge@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.12"
 fastapi = "^0.104.0"
-celery = "^5.3.6"
-redis = "^5.0.1"
 requests = "^2.31.0"
 beautifulsoup4 = "^4.12.2"
 lxml = "^4.9.3"
 pydantic = "<2.0.0"
-sqlmodel = "^0.0.12"
-alembic = "^1.12.1"
 python-multipart = "^0.0.6"
 authlib = "^1.2.1"
-passlib = {extras = ["bcrypt"], version = "^1.7.4"}
-google-auth = "^2.24.0"
+passlib = { extras = ["bcrypt"], version = "^1.7.4" }
+google-auth = "^2.25.1"
+sqlmodel = "^0.0.14"
+alembic = {extras = ["tz"], version = "^1.13.0"}
+celery = {extras = ["redis"], version = "^5.3.6"}
 
 [tool.poetry.group.pytest.dependencies]
 pytest = "^7.4.3"
@@ -34,7 +33,7 @@ pytest-dotenv = "^0.5.2"
 black = "^23.11.0"
 flake8 = "^6.1.0"
 isort = "^5.12.0"
-mypy = "^1.7.0"
+mypy = "^1.7.1"
 types-requests = "^2.31.0.10"
 
 [tool.poetry.group.security.dependencies]
@@ -42,7 +41,7 @@ bandit = { extras = ["toml"], version = "^1.7.5" }
 pip-audit = "^2.6.1"
 
 [tool.poetry.group.dev.dependencies]
-tox = "^4.11.3"
+tox = "^4.11.4"
 
 [tool.poetry.group.coverage.dependencies]
 coverage = "^7.3.2"
