code cleanup and updates

--- a/.env/.env.dev
+++ b/.env/.env.dev
@@ -6,6 +6,7 @@ VERSION="0.1.0"
 DESCRIPTION="The API for Archive Binge."
 ENVIRONMENT="development"
 SECRET_KEY="verysecretkey"
+TOKEN_EXPIRATION=30
 
 # DATABASE
 
