--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -8,21 +8,21 @@ authors = ["Madeleine Ethridge <madeleine.ethridge@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.12"
-fastapi = "^0.104.0"
+fastapi = "^0.109.0"
 requests = "^2.31.0"
-beautifulsoup4 = "^4.12.2"
-lxml = "^4.9.3"
-pydantic = "<2.0.0"
+beautifulsoup4 = "^4.12.3"
+lxml = "^4.9.4"
 python-multipart = "^0.0.6"
-authlib = "^1.2.1"
+authlib = "^1.3.0"
 passlib = { extras = ["bcrypt"], version = "^1.7.4" }
-google-auth = "^2.25.1"
+google-auth = "^2.26.2"
 sqlmodel = "^0.0.14"
-alembic = {extras = ["tz"], version = "^1.13.0"}
-celery = {extras = ["redis"], version = "^5.3.6"}
+alembic = { extras = ["tz"], version = "^1.13.1" }
+celery = { extras = ["redis"], version = "^5.3.6" }
+pydantic-settings = "^2.1.0"
 
 [tool.poetry.group.pytest.dependencies]
-pytest = "^7.4.3"
+pytest = "^7.4.4"
 pytest-cov = "^4.1.0"
 httpx = "^0.25.1"
 pytest-asyncio = "^0.21.1"
@@ -30,21 +30,21 @@ aiosqlite = "^0.19.0"
 pytest-dotenv = "^0.5.2"
 
 [tool.poetry.group.lint.dependencies]
-black = "^23.11.0"
+black = "^23.12.1"
 flake8 = "^6.1.0"
-isort = "^5.12.0"
-mypy = "^1.7.1"
-types-requests = "^2.31.0.10"
+isort = "^5.13.2"
+mypy = "^1.8.0"
+types-requests = "^2.31.0.20240106"
 
 [tool.poetry.group.security.dependencies]
-bandit = { extras = ["toml"], version = "^1.7.5" }
-pip-audit = "^2.6.1"
+bandit = { extras = ["toml"], version = "^1.7.6" }
+pip-audit = "^2.7.0"
 
 [tool.poetry.group.dev.dependencies]
-tox = "^4.11.4"
+tox = "^4.12.1"
 
 [tool.poetry.group.coverage.dependencies]
-coverage = "^7.3.2"
+coverage = "^7.4.0"
 
 [tool.poetry.group.server.dependencies]
 uvicorn = { extras = ["standard"], version = "^0.24.0.post1" }
