--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -15,7 +15,7 @@ lxml = "^4.9.4"
 python-multipart = "^0.0.6"
 authlib = "^1.3.0"
 passlib = { extras = ["bcrypt"], version = "^1.7.4" }
-google-auth = "^2.26.2"
+google-auth = "^2.27.0"
 sqlmodel = "^0.0.14"
 alembic = { extras = ["tz"], version = "^1.13.1" }
 celery = { extras = ["redis"], version = "^5.3.6" }
@@ -30,21 +30,18 @@ aiosqlite = "^0.19.0"
 pytest-dotenv = "^0.5.2"
 
 [tool.poetry.group.lint.dependencies]
-black = "^23.12.1"
-flake8 = "^6.1.0"
-isort = "^5.13.2"
 mypy = "^1.8.0"
-types-requests = "^2.31.0.20240106"
+ruff = "^0.2.1"
 
 [tool.poetry.group.security.dependencies]
-bandit = { extras = ["toml"], version = "^1.7.6" }
+bandit = { extras = ["toml"], version = "^1.7.7" }
 pip-audit = "^2.7.0"
 
 [tool.poetry.group.dev.dependencies]
 tox = "^4.12.1"
 
 [tool.poetry.group.coverage.dependencies]
-coverage = "^7.4.0"
+coverage = "^7.4.1"
 
 [tool.poetry.group.server.dependencies]
 uvicorn = { extras = ["standard"], version = "^0.24.0.post1" }
@@ -62,20 +59,14 @@ skips = [
     "B410", # https://github.com/PyCQA/bandit/issues/767
 ]
 
-[tool.black]
+[tool.ruff]
 line-length = 79
 
-[tool.isort]
-line_length = 79
-lines_between_types = 1
-profile = "black"
-remove_redundant_aliases = true
-#skip = ["migrations"]
-wrap_length = 79
+[tool.ruff.lint]
+select = ["E4", "E7", "E9", "F", "I001"]
 
 [tool.mypy]
-#plugins = "sqlmypy"
-#exclude = "migrations"
+plugins = ["sqlalchemy.ext.mypy.plugin"]
 show_error_context = true
 show_error_codes = true
 strict = true
@@ -95,3 +86,11 @@ warn_unused_ignores = true
 asyncio_mode = "auto"
 filterwarnings = ['ignore:datetime.datetime.utcfromtimestamp\(\) is deprecated']
 env_files = [".env/.env.dev"]
+
+[tool.coverage.run]
+branch = true
+source = ["app"]
+omit = ["api/tests/*", "*__init__.py"]
+
+[tool.coverage.report]
+omit = ["api/tests/*", "*__init__.py"]
