--- a/api/tox.ini
+++ b/api/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    flake8
+    lint
     mypy
     bandit
     pytest
@@ -26,10 +26,10 @@ commands =
     mypy {toxinidir}/app
 install_command = poetry install --only main,lint
 
-[testenv:flake8]
+[testenv:lint]
 commands =
     poetry install --no-root --only main,lint --sync
-    flake8 {toxinidir}/app
+    ruff {toxinidir}/app
 install_command = poetry install --only main,lint
 
 [testenv:bandit]
@@ -45,7 +45,6 @@ install_command = poetry install --only main,security
 [testenv:pytest]
 commands =
     poetry install --no-root --only main,pytest --sync
-    alembic upgrade head
     pytest --cov --cov-report xml:coverage.xml
 install_command = poetry install --only main,pytest
 
