--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -28,14 +28,15 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Install Poetry
+        run: pip install poetry==1.7.1
+
       - name: Set up Python 3.12
         uses: actions/setup-python@v3
         with:
           python-version: "3.12"
-          cache: "poetry"
-
-      - name: Install Poetry
-        run: pip install poetry==1.7.1
+          cache: poetry
+          cache-dependency-path: poetry.lock
 
       - name: Install Dependencies
         run: poetry install --without server
