--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -11,21 +11,21 @@ python = "^3.12"
 fastapi = "^0.109.2"
 requests = "^2.31.0"
 beautifulsoup4 = "^4.12.3"
-lxml = "^4.9.4"
-python-multipart = "^0.0.6"
+lxml = "^5.1.0"
+python-multipart = "^0.0.9"
 authlib = "^1.3.0"
-google-auth = "^2.27.0"
+bcrypt = "^4.1.2"
+google-auth = "^2.28.0"
 sqlmodel = "^0.0.14"
 alembic = { extras = ["tz"], version = "^1.13.1" }
 celery = { extras = ["redis"], version = "^5.3.6" }
-pydantic-settings = "^2.1.0"
-bcrypt = "^4.1.2"
+pydantic-settings = "^2.2.0"
 
 [tool.poetry.group.pytest.dependencies]
-pytest = "^7.4.4"
+pytest = "^8.0.1"
 pytest-cov = "^4.1.0"
-httpx = "^0.25.1"
-pytest-asyncio = "^0.21.1"
+httpx = "^0.26.0"
+pytest-asyncio = "^0.23.5"
 aiosqlite = "^0.19.0"
 pytest-dotenv = "^0.5.2"
 
@@ -42,13 +42,13 @@ bandit = { extras = ["toml"], version = "^1.7.7" }
 pip-audit = "^2.7.1"
 
 [tool.poetry.group.dev.dependencies]
-tox = "^4.12.1"
+tox = "^4.13.0"
 
 [tool.poetry.group.coverage.dependencies]
 coverage = "^7.4.1"
 
 [tool.poetry.group.server.dependencies]
-uvicorn = { extras = ["standard"], version = "^0.24.0.post1" }
+uvicorn = { extras = ["standard"], version = "^0.27.1" }
 asyncpg = "^0.29.0"
 
 [build-system]
